--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,5 +1,16 @@
 version: '3.1'
 services:
+  test-db:
+    image: postgres
+    restart: always
+    volumes:
+      - ./docker-data/test-db:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_TEST_DB}
+    ports:
+      - 5433:5432
   db:
     image: postgres
     restart: always
