--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "objection": "^2.2.1",
     "papaparse": "^5.2.0",
     "pg": "^8.2.1",
+    "uuid": "^8.2.0",
     "yup": "^0.29.1"
   },
   "devDependencies": {
