Moved seeding into thier own files
Signed-off-by: Jace Babin <jbabin91@gmail.com>

--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "yup": "^0.29.1"
   },
   "devDependencies": {
+    "faker": "^4.1.0",
     "jest": "^26.1.0",
     "nodemon": "^2.0.4",
     "ox": "^0.0.1",
