Started working on api
Signed-off-by: Jace Babin <jbabin91@gmail.com>

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,4 +1,6 @@
 POSTGRES_PASSWORD=admin
 POSTGRES_USER=admin
 POSTGRES_DB=cookbook
+POSTGRES_TEST_DB=cookbook-test
+PORT=3000
 JWT_SECRET=keyboard_cat
