--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
     "seed": "knex seed:run",
-    "test": "jest",
+    "test": "mocha --timeout 10000 --bail",
     "test:debug": "nodemon --inspect node_modules/.bin/jest --watch --runInBand"
   },
   "author": "Jace Babin <jbabin91@gmail.com>",
@@ -30,10 +30,15 @@
     "yup": "^0.29.1"
   },
   "devDependencies": {
+    "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "cors": "^2.8.5",
     "faker": "^4.1.0",
-    "jest": "^26.1.0",
+    "mocha": "^8.0.1",
     "nodemon": "^2.0.4",
     "ox": "^0.0.1",
+    "superagent": "^5.3.1",
     "supertest": "^4.0.2"
   }
 }
