--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -22,6 +22,13 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - 5432:5432
+  api:
+    image: cookbook-api
+    build: .
+    ports:
+      - 3000:3000
+    volumes:
+      - ./src:/usr/app/src
   adminer:
     depends_on:
       - db
