Added a new eslint rule
Signed-off-by: Jace Babin <jbabin91@gmail.com>

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -33,6 +33,7 @@
     "import/no-extraneous-dependencies": [
       "error",
       { "devDependencies": ["**/*.stories.tsx"] }
-    ]
+    ],
+    "@typescript-eslint/explicit-module-boundary-types": 0
   }
 }
