Updating config files
Signed-off-by: Jace Babin <jbabin91@gmail.com>

--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -30,10 +30,7 @@
   },
   "rules": {
     "prettier/prettier": "error",
-    "import/no-extraneous-dependencies": [
-      "error",
-      { "devDependencies": ["**/*.stories.tsx"] }
-    ],
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": ["**/*.stories.tsx"] }],
     "@typescript-eslint/explicit-module-boundary-types": 0
   }
 }
