--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn format && yarn lint"
+      "pre-commit": "yarn format && yarn lint",
+      "post-commit": "git update-index -g"
     }
   },
   "eslintConfig": {
@@ -75,6 +76,7 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "4.0.0",
     "husky": "^4.2.5",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "pretty-quick": "^2.0.1"
   }
 }
