--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -13,7 +13,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "preserve",
+    "suppressImplicitAnyIndexErrors": true,
+    "baseUrl": "src"
   },
   "include": ["src"]
 }
