Updated husky hooks
Signed-off-by: Jace Babin <jbabin91@gmail.com>

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn format && yarn lint",
+      "pre-commit": "pretty-quick --staged",
       "post-commit": "git update-index -g"
     }
   },
