--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -13,9 +13,14 @@
 
 # misc
 .DS_Store
+.env
+.env.development
+.env.production
+.env.staging
+.env.testing
 .env.local
 .env.development.local
-.env.test.local
+.env.testing.local
 .env.production.local
 
 npm-debug.log*
