--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "scripts": {
     "start": "react-scripts start",
+    "start:prod": "env-cmd -f .env.production react-scripts start",
+    "start:test": "env-cmd -f .env.testing react-scripts start",
+    "start:staging": "env-cmd -f .env.staging react-scripts start",
     "build": "react-scripts build",
+    "build:test": "env-cmd -f .env.testing react-scripts test",
+    "build:staging": "env-cmd -f .env.staging react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write src/**/*.ts{,x}",
-    "lint": "tsc --noEmit && eslint src/**/*.ts{,x}",
+    "lint": "tsc --noEmit && eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
   },
@@ -65,7 +70,7 @@
     "@storybook/react": "^5.3.19",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
-    "eslint": "7.2.0",
+    "env-cmd": "^10.1.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-airbnb-typescript": "^9.0.0",
     "eslint-config-prettier": "^6.11.0",
