--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,13 +49,17 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.5",
     "easy-peasy": "^3.3.1",
     "emotion-theming": "^10.0.27",
+    "history": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.0.8",
+    "react-icons": "^3.10.0",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "swr": "^0.2.3",
