--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,9 +39,7 @@
     ]
   },
   "dependencies": {
-    "@chakra-ui/core": "^0.8.0",
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -51,7 +49,6 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "easy-peasy": "^3.3.1",
-    "emotion-theming": "^10.0.27",
     "history": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
