Added state for routes and got active route toggle working
Signed-off-by: Jace Babin <jbabin91@gmail.com>

--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -31,7 +31,8 @@
   "rules": {
     "prettier/prettier": "error",
     "import/no-extraneous-dependencies": ["error", { "devDependencies": ["**/*.stories.tsx"] }],
-    "@typescript-eslint/explicit-module-boundary-types": 0
+    "@typescript-eslint/explicit-module-boundary-types": 0,
+    "no-param-reassign": 0
   },
   "settings": {
     "react": {
